--- a/index.html
+++ b/index.html
@@ -15,64 +15,72 @@
           <li><a href=""></a>Портфоліо</li>
           <li><a href=""></a>Контакти</li>
         </ul>
-        <ul>
-          <li><a href="info@devstudio.com"></a>info@devstudio.com</li>
-          <li><a href="+38096111111"></a>+38 096 111 11 11</li>
-        </ul>
       </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
+        <li><a href="tel:+38096111111"></a>+38 096 111 11 11</li>
+      </ul>
     </header>
     <main>
       <section>
-        <h1></h1>
-        <button type="button"></button>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
       </section>
       <section>
         <ul>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
-        <h2></h2>
+        <h2>Чим ми займаємося</h2>
         <ul>
-          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+          <img src="" alt="Руки на клавіатурі. Поруч - планшет." /><img
+            src=""
+            alt="Смартфон в руках. Поруч - ноутбук."
+          /><img src="" alt="Планшет в руках. На планшеті - палітра кольорів." />
         </ul>
       </section>
       <section>
-        <h2></h2>
+        <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p lang="en"></p>
+            <img src="" alt="Фото Ігоря Дем'яненко" />
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p lang="en"></p>
+            <img src="" alt="Фото Ольги Рєпіної" />
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p lang="en"></p>
+            <img src="" alt="Фото Миколи Тарасова" />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="" alt="Фото Михайла Єрмакова" />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href=""></a>
+      <a href="">WebStudio</a>
       <address>
         <ul>
           <li>
@@ -80,10 +88,11 @@
               href="https://goo.gl/maps/R8dx9tAfrHtU4k7H6"
               target="_blank"
               rel="noopener nofollow noreferrer"
-            ></a>
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li><a href="info@devstudio.com"></a>info@devstudio.com</li>
+          <li><a href="+380961111111"></a>+38 096 111 11 11</li>
         </ul>
       </address>
     </footer>
