--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header>
       <nav>
         <ul>
-          <li><a href=""></a>WebStudio</li>
-          <li><a href=""></a>Студія</li>
-          <li><a href=""></a>Портфоліо</li>
-          <li><a href=""></a>Контакти</li>
+          <li><a href="">WebStudio</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-        <li><a href="tel:+38096111111"></a>+38 096 111 11 11</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -47,32 +47,52 @@
         </ul>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <img src="" alt="Руки на клавіатурі. Поруч - планшет." /><img
-            src=""
-            alt="Смартфон в руках. Поруч - ноутбук."
-          /><img src="" alt="Планшет в руках. На планшеті - палітра кольорів." />
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="Руки на клавіатурі. Поруч - планшет."
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="Смартфон в руках. Поруч - ноутбук."
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-3.jpg"
+              alt="Планшет в руках. На його екрані - палітра кольорів."
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="" alt="Фото Ігоря Дем'яненко" />
+            <img src="./images/img-4.jpg" alt="Фото Ігоря Дем'яненко" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="" alt="Фото Ольги Рєпіної" />
+            <img src="./images/img-5.jpg" alt="Фото Ольги Рєпіної" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="" alt="Фото Миколи Тарасова" />
+            <img src="./images/img-6.jpg" alt="Фото Миколи Тарасова" width="270" height="260" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="" alt="Фото Михайла Єрмакова" />
+            <img src="./images/img-7.jpg" alt="Фото Михайла Єрмакова" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -91,8 +111,8 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="info@devstudio.com"></a>info@devstudio.com</li>
-          <li><a href="+380961111111"></a>+38 096 111 11 11</li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
