--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="">WebStudio</a></li>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
@@ -27,6 +27,7 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші принципи</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -45,6 +46,8 @@
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
+      </section>
+      <section>
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
